# polyMPO

./: .gitignore  CMakeLists.txt  Makefile.testFortran  README.md  config.cmake.in  log
.github/: CODEOWNERS
.github/workflows/: cmake.yml
src/: .nfs000000000000a0e1000006e7  .pmpo_MPMesh_assembly.hpp.swp  CMakeLists.txt  MPM.hpp  assembly.hpp  integration.hpp  materialPoints.hpp  mesh.cpp  mesh.hpp  pmo_c.cpp  pmo_c.h  pmo_createTestMPMesh.cpp  pmo_createTestMPMesh.hpp  pmo_fortran.f90  pmpo_MPMesh.cpp  pmpo_MPMesh.hpp  pmpo_MPMesh_assembly.hpp  pmpo_assembly.hpp  pmpo_c.cpp  pmpo_c.cpp.orig  pmpo_c.h  pmpo_createTestMPMesh.cpp  pmpo_createTestMPMesh.hpp  pmpo_defines.h  pmpo_fortran.f90  pmpo_fortran.f90.orig  pmpo_materialPoints.cpp  pmpo_materialPoints.hpp  pmpo_materialPoints.hpp.orig  pmpo_mesh.cpp  pmpo_mesh.hpp  pmpo_utils.cpp  pmpo_utils.hpp  pmpo_wachspressBasis.hpp  pmt_MPM.cpp  pmt_MPM.hpp  pmt_MPMesh.cpp  pmt_MPMesh.hpp  pmt_assembly.hpp  pmt_materialPoints.cpp  (+11 more)
test/: .testUtils.cpp.swp  CMakeLists.txt  Makefile.testFortranInit  calculateDisplacement.f90  mpUnitTest.cpp  queue.f90  readMPAS.f90  testFoo.cpp  testFortraAdjacency.f90  testFortran.f90  testFortranCreateMPs.f90  testFortranCreateRebuildMPs.f90  testFortranInit.f90  testFortranInterpolatePush.f90  testFortranMPAdvection.f90  testFortranMPAppIDs.f90  testFortranMPMeshModule.f90  testFortranMPReconstruction.f90  testFortranMigration.f90  testFortranReadMPAS.f90  testMPAppIDs.cpp  testMigration.cpp  testRebuild.cpp  testReconstruction.cpp  testT2L.cpp  testTiming.cpp  testTracking.cpp  testUtils.cpp  testUtils.hpp  testWachspress.cpp  testWachspress.cpp.orig  unitTest.cpp
test/sample_mpas_meshes/: README.md  planar_nonuniform_cvt_for_square_673elms.nc  planar_nonuniform_cvt_for_square_737elms.nc  spherical_cvt_642elms.nc
test/use_at_your_own_risk/: Makefile.testFortranInit  MakefileCPU.testFortranInit  MakefilePerlmutterCPU.testFortranInit  README.md  generateMakefile.sh  generateMakefileCPUNoNetcdfOrHDF5.sh
